mac: Don't rely on Breakpad Info.plist keys for Crashpad initialization

BUG=626811

Review-Url: https://codereview.chromium.org/2204473002
Cr-Commit-Position: refs/heads/master@{#409063}

Former-commit-id: bd828670eaef26966373521fa23624d5b7b3ddd6